added committee section

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
   <!-- vid End -->
 
   <a id="scroll-down"></a>
-  <!-- Section One Start -->
+  <!-- Content section Start -->
   <section class="steps container-custom">
     <div class="row">
-      <div class="col-12 col-sm-6 d-md-flex justify-content-md-ceneter">
+      <div class="col-12 col-sm-6 d-md-flex justify-content-md-center">
         <img src="img/1-farm.jpg" alt="Salmon Farm" class="img-fluid pb-4 steps__section-thumbnail" width="553" height="746" loading="lazy">
       </div>
-      <div class="col-12 col-sm-6 align-self-center justify-content-md-ceneter">
+      <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
         <div class="steps__content-width">
           <h1 class="h2 mb-4">สดจากฟาร์ม</h1>
           <p class="mb-4">ปลาแซลมอนของเราน้ำเข้าจากซัพพลายเออร์ในประเทศนอร์เวย์ที่มีความชำนานและประสบการณ์ด้านอุตสาหกรรมปลาแซลมอนมากกว่า 30 ปี ทางเรามุ่งเน้นที่สุขภาพของปลาและสิ่งแวดล้อมเป็นหลักเพื่อให้ได้มาซึ่งผลิตภัณฑ์คุณภาพสูง สด และสะอาดสำหรับลูกค้าของเรา</p>
@@ -120,19 +120,19 @@
     </div>
 
   </section>
-  <!-- Section One End -->
+  <!-- Content section End -->
 
-  <!-- Section One Start -->
+  <!-- Content section Start -->
   <section class="steps steps--background">
 
     <div class="container-custom">
 
       <div class="row">
-        <div class="col-12 col-sm-6 d-md-flex justify-content-md-ceneter order-sm-1">
+        <div class="col-12 col-sm-6 d-md-flex justify-content-md-center order-sm-1">
           <img src="img/2-sorting.jpg" alt="Sorting and selecting" class="img-fluid pb-4 steps__section-thumbnail" width="553" height="746" loading="lazy">
         </div>
 
-        <div class="col-12 col-sm-6 align-self-center justify-content-md-ceneter">
+        <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
           <div class="steps__content-width">
             <h1 class="h2 mb-4">คัดสรร</h1>
             <p class="mb-4">เรามั่นใจในคุณภาพทุกขั้นตอนตั้งแต่การจับไปจนถึงการจำหน่าย ผลิตภัณฑ์ผ่านการฆ่าเชื้อแบคทีเรียและถูกคัดสรรมาอย่างดีด้วยบุคลากรที่ชำนานเพื่อให้ได้มาตรฐานและคุณภาพสูงสุด</p>
@@ -142,17 +142,17 @@
 
     </div>
   </section>
-  <!-- Section One End -->
+  <!-- Content section End -->
 
-  <!-- Section One Start -->
+  <!-- Content section Start -->
   <section class="steps container-custom">
 
     <div class="row">
-      <div class="col-12 col-sm-6 d-md-flex justify-content-md-ceneter">
+      <div class="col-12 col-sm-6 d-md-flex justify-content-md-center">
         <img src="img/3-transporting.jpg" alt="Transport by plane cargo" class="img-fluid pb-4 steps__section-thumbnail" width="553" height="746" loading="lazy">
       </div>
 
-      <div class="col-12 col-sm-6 align-self-center justify-content-md-ceneter">
+      <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
 
         <div class="steps__content-width">
           <h1 class="h2 mb-4">ส่งตรงจากฟาร์มด้วยเครื่องบินคาร์โก้</h1>
@@ -163,9 +163,51 @@
     </div>
 
   </section>
-  <!-- Section One End -->
+  <!-- Content section End -->
+  
+  <!-- committee section Start-->
+  <a id="committee-section"></a>
+  <section class="steps--background pt-4">
+    <div class="col-12 col-sm-12">
+      <h1 class="text-center mb-4">คณะกรรมการ</h1>
+    </div>
+    <div class="col-12 col-sm-12 text-center">
+      <img src="img/profile-1.jpg" class="mb-4 img-fluid profile-img" alt="Committee1" width="200" height="200" loading="lazy">
+      <h3 class="text-center">ธนัญชัย ประสมวงค์</h3>
+      <p class="text-center mb-0">ประธาน</p>
+    </div>
+  </section>
 
-  <!-- Section With 3 Col's Start -->
+
+  <section class="steps--background text-black py-4">
+    <div class="container-custom my-4">
+      <div class="row text-center">
+
+        <div class="col-12 col-sm-4 mb-4">
+          <img src="img/profile-2.jpg" class="mb-4 img-fluid profile-img" alt="Committee2" width="200" height="200" loading="lazy">
+          <h3 class="text-center">อาภาภรณ์ ประสมวงค์</h3>
+          <p class="text-center">กรรมการ</p>
+        </div>
+        
+        <div class="col-12 col-sm-4 mb-4">
+          <img src="img/profile-3.jpg" class="mb-4 img-fluid profile-img" alt="Committee3" width="200" height="200" loading="lazy">
+          <h3 class="text-center">อิสรระ วรวสุวัส</h3>
+          <p class="text-center">กรรมการ</p>
+        </div>
+
+        <div class="col-12 col-sm-4 mb-4">
+          <img src="img/profile-4.jpg" class="mb-4 img-fluid profile-img" alt="Committee4" width="200" height="200" loading="lazy">
+          <h3 class="text-center">สุทธิเกียรติ มาลา</h3>
+          <p class="text-center">กรรมการ</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- committee section End -->
+
+  <!-- Contact section Start-->
   <a id="contact-section"></a>
   <section class="bg-dark text-white py-4">
     <div class="container-custom my-4">
@@ -185,7 +227,7 @@
       </div>
     </div>
   </section>
-  <!-- Section With 3 Col's End -->
+  <!-- Contact section End -->
 
   <!-- Footer Start -->
   <footer class="footer bg-dark text-white">
