changed img size

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <div class="row">
       <div class="col-12 col-sm-6 d-md-flex justify-content-md-center">
-        <img src="img/3-transporting.jpg" alt="Transport by plane cargo" class="img-fluid pb-4 steps__section-thumbnail" width="553" height="746" loading="lazy">
+        <img src="img/3-transporting.jpg" alt="Transport by plane cargo" class="img-fluid pb-4" width="553" height="746" loading="lazy">
       </div>
 
       <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
