corrected misspelled words and removed one of the committee

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
         <div class="steps__content-width">
           <h1 class="h2 mb-4">สดจากฟาร์ม</h1>
-          <p class="mb-4">ปลาแซลมอนของเราน้ำเข้าจากซัพพลายเออร์ในประเทศนอร์เวย์ที่มีความชำนานและประสบการณ์ด้านอุตสาหกรรมปลาแซลมอนมากกว่า 30 ปี ทางเรามุ่งเน้นที่สุขภาพของปลาและสิ่งแวดล้อมเป็นหลักเพื่อให้ได้มาซึ่งผลิตภัณฑ์คุณภาพสูง สด และสะอาดสำหรับลูกค้าของเรา</p>
+          <p class="mb-4">ปลาแซลมอนของเรานำเข้าจากซัพพลายเออร์ในประเทศนอร์เวย์ที่มีความชำนาญและประสบการณ์ด้านอุตสาหกรรมปลาแซลมอนมากกว่า 30 ปี ทางเรามุ่งเน้นที่สุขภาพของปลาและสิ่งแวดล้อมเป็นหลักเพื่อให้ได้มาซึ่งสินค้าคุณภาพสูง สด และสะอาดสำหรับลูกค้าของเรา</p>
         </div>
       </div>
     </div>
@@ -135,7 +135,7 @@
         <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
           <div class="steps__content-width">
             <h1 class="h2 mb-4">คัดสรร</h1>
-            <p class="mb-4">เรามั่นใจในคุณภาพทุกขั้นตอนตั้งแต่การจับไปจนถึงการจำหน่าย ผลิตภัณฑ์ผ่านการฆ่าเชื้อแบคทีเรียและถูกคัดสรรมาอย่างดีด้วยบุคลากรที่ชำนานเพื่อให้ได้มาตรฐานและคุณภาพสูงสุด</p>
+            <p class="mb-4">เรามั่นใจในคุณภาพทุกขั้นตอนตั้งแต่การจับไปจนถึงการจำหน่าย สินค้าผ่านการฆ่าเชื้อแบคทีเรียและถูกคัดสรรมาอย่างดีด้วยบุคลากรที่ชำนาญเพื่อให้ได้มาตรฐานและคุณภาพสูงสุด</p>
           </div>
         </div>
       </div>
@@ -156,7 +156,7 @@
 
         <div class="steps__content-width">
           <h1 class="h2 mb-4">ส่งตรงจากฟาร์มด้วยเครื่องบินคาร์โก้</h1>
-          <p class="mb-4">ผลิตภัณฑ์จะถูกบรรจุในบรรจุภัณฑ์ที่ได้มาตรฐานส่งตรงจากฟาร์มถึงประเทศไทยด้วยเครื่องบินคาร์โก้ในห้องควบคุมอุณหภูมิและเมื่อผลิตภัณฑ์ถึงไทยผลิตภัณฑ์จะถูกจัดส่งถึงลูกค้าด้วยรถบรรทุกควบคุมอุณภูมิเพื่อให้ผลิตภัณฑ์อยู่ในมาตรฐานและสดตลอดเวลา</p>
+          <p class="mb-4">สินค้าจะถูกบรรจุในบรรจุภัณฑ์ที่ได้มาตรฐานส่งตรงจากฟาร์มถึงประเทศไทยด้วยเครื่องบินคาร์โก้ในห้องควบคุมอุณหภูมิและเมื่อสินค้าถึงไทยสินค้าจะถูกจัดส่งถึงลูกค้าด้วยรถบรรทุกควบคุมอุณภูมิเพื่อให้มันใจสินค้าคงอยู่ในมาตรฐานและสดตลอดเวลา</p>
         </div>
 
       </div>
@@ -183,21 +183,15 @@
     <div class="container-custom my-4">
       <div class="row text-center">
 
-        <div class="col-12 col-sm-4 mb-4">
+        <div class="col-12 col-sm-6 mb-6">
           <img src="img/profile-2.jpg" class="mb-4 img-fluid profile-img" alt="Committee2" width="200" height="200" loading="lazy">
           <h3 class="text-center">อาภาภรณ์ ประสมวงค์</h3>
           <p class="text-center">กรรมการ</p>
         </div>
         
-        <div class="col-12 col-sm-4 mb-4">
+        <div class="col-12 col-sm-6 mb-6">
           <img src="img/profile-3.jpg" class="mb-4 img-fluid profile-img" alt="Committee3" width="200" height="200" loading="lazy">
           <h3 class="text-center">อิสรระ วรวสุวัส</h3>
-          <p class="text-center">กรรมการ</p>
-        </div>
-
-        <div class="col-12 col-sm-4 mb-4">
-          <img src="img/profile-4.jpg" class="mb-4 img-fluid profile-img" alt="Committee4" width="200" height="200" loading="lazy">
-          <h3 class="text-center">สุทธิเกียรติ มาลา</h3>
           <p class="text-center">กรรมการ</p>
         </div>
 
