removed committee section

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <!-- Content section End -->
   
   <!-- committee section Start-->
-  <a id="committee-section"></a>
+  <!-- <a id="committee-section"></a>
   <section class="steps--background pt-4">
     <div class="col-12 col-sm-12">
       <h1 class="text-center mb-4">คณะกรรมการ</h1>
@@ -197,7 +197,7 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- committee section End -->
 
