changed banner video

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="vid__overlay"></div>
     <!-- Video not included. Download: https://www.pexels.com/video/two-people-in-front-of-a-campfire-pouring-water-from-a-kettle-2675515/ -->
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" loading="lazy" class="vid__video">
-      <source src="img/nor_norway.mp4" type="video/mp4">
+      <source src="img/vid_playback.mp4" type="video/mp4">
     </video>
     <div class="vid__content h-100 container-custom position-relative">
       <div class="d-flex h-100 align-items-center vid__content-width">
@@ -232,8 +232,8 @@
         </a> 
       </div>
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex text-white">
-        <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-instagram"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-facebook"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/norwegianseafood.co.ltd"><i class="bi bi-facebook"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://lin.ee/5MPOWg0"><i class="bi bi-line"></i></a></li>
       </ul>
     </div>
   </footer>
