changed email address

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <p>NORWEGIAN SEAFOOD CO.,LTD.</p>
           <P>110 โพนงาม เดชอุดม อุบลราชธานี 34160</P>
           <a href="tel:094 282 0628" style="text-decoration: none">Tel: 094 282 0628</a>
-          <p>Email: laksfamilybuisness@gmail.com</p>
+          <p>Email: info@norwegianseafood.co</p>
         </div>
 
       </div>
